--- a/BTL_KTPM.WebMvc/wwwroot/css/contact.css
+++ b/BTL_KTPM.WebMvc/wwwroot/css/contact.css
@@ -1,4 +1,64 @@
+.header-top__menu--account {
+    position: relative;
+    margin: 0 10px;
+    color: #000;
+    width: 100px;
+}
 
+.header-top__menu--shop a,
+.header-top__menu--account a {
+    text-decoration: none;
+    color: #000;
+}
+
+.header-top__menu--shop a:hover,
+.header-top__menu--account a:hover {
+    color: #916841;
+    cursor: pointer;
+}
+
+.header-top__menu--account:hover
+.header-top__menu--account--list {
+    display: block;
+}
+
+.header-top__menu--shop::after,
+.header-top__menu--account::after {
+    content: "";
+    width: 100%;
+    height: 15px;
+    left: 0;
+    bottom: -9px;
+    position: absolute;
+}
+
+.header-top__menu--account--list {
+    letter-spacing: normal;
+    z-index: 1;
+    display: none;
+    position: absolute;
+    left: 0px;
+    top: 140%;
+    width: 150%;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    line-height: 2;
+    border-radius: 3px;
+    font-weight: 400;
+    box-shadow: 0 0 3px #757575;
+    background-color: #fff;
+}
+
+.header-top__menu--account-item {
+    padding: 5px 10px;
+}
+
+    .header-top__menu--account-item:hover {
+        color: #916841;
+        cursor: pointer;
+        background-color: #f7f7f7;
+    }
 
 * {
     box-sizing: border-box;
