--- a/BTL_KTPM.WebMvc/Views/Shared/_Layout.cshtml
+++ b/BTL_KTPM.WebMvc/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
     
-    
+    <link rel="stylesheet" href="~/css/cart.css">
     <link rel="stylesheet" href="~/css/login_css.css">
      <link rel="stylesheet" href="~/css/regeiter.css">
     <link rel="stylesheet" href="~/css/about.css"> 
@@ -124,6 +124,7 @@
                                                         </button>
                                                      </form>
                                                 </li>
+                                                <li class="header-top__menu--account-item"><a href="@Url.Action("Index","Cart")" style="padding: 0;"> Giỏ hàng</a></li>
                                             </ul>
                                         }
                                         else
@@ -140,7 +141,7 @@
                                     </li>
                                     <li>
                                         <a class="icon-buy" href="cart.html">
-                                            <i class="fas fa-shopping-cart"></i>
+                                            <i class="fas fa-shopping-cart" ></i>
                                             <div class="number-buy">0</div>
                                         </a>
                                     </li>
