--- a/BTL_KTPM.Admin_App/Views/Producer/Index.cshtml
+++ b/BTL_KTPM.Admin_App/Views/Producer/Index.cshtml
@@ -77,7 +77,12 @@
                         <th>
                             Mô tả
                         </th>
-                        <th></th>
+                        <th>
+                            SĐT
+                        </th>
+                        <th>
+                            Địa chỉ
+                        </th>
                     </tr>
                 </thead>
                 <tbody>
@@ -92,6 +97,12 @@
                             </td>
                             <td>
                                 @Html.DisplayFor(modelItem => item.Description)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.SĐT)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Address)
                             </td>
                             <td>
                                 @Html.ActionLink("Sửa", "Edit", new { id = item.Id },new {@class= "btn btn-success"})
