--- a/BTL_KTPM.WebMvc/Views/Account/Register.cshtml
+++ b/BTL_KTPM.WebMvc/Views/Account/Register.cshtml
@@ -5,7 +5,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
- <div class="regeiter-content">
+ <div class="regeiter-content" style="margin: 150px 300px 100px;">
         <div class="title-login">ĐĂNG KÝ TÀI KHOẢN</div>
         <div class="regeiter-form">
             <form action="/Account/Register" method="post">
