--- a/BTL_KTPM.WebMvc/Views/Cart/Index.cshtml
+++ b/BTL_KTPM.WebMvc/Views/Cart/Index.cshtml
@@ -131,7 +131,7 @@
                             </div>
                         </div>
                     </div>
-                    <a href="checkout.html"><button class="checkout">Thanh toán</button></a>
+                    <a href="@Url.Action("CheckOutView","Cart")"><button class="checkout">Thanh toán</button></a>
                 </div>
             </div>
         </div>
