--- a/BTL_KTPM.WebMvc/Views/Product/Details.cshtml
+++ b/BTL_KTPM.WebMvc/Views/Product/Details.cshtml
@@ -46,7 +46,7 @@
                             <p class="text-intro">Một chiếc bàn xinh đẹp phù hợp với phong cách đơn giản nhưng đầy tinh tế và sang trọng.</p>
                             <form asp-action="AddToCart" asp-controller="Cart" method="post" style="width: 100%;">
 
-                                <div class="soluong d-flex align-items-center">
+                                <div class="soluong d-flex align-items-center" style="justify-content:inherit">
 
                                     <p class="sl-text">Số lượng: </p>
                                     <button type="button" class="Add_Quantity_Product">
