--- a/BTL_KTPM.Admin_App/Views/Producer/Create.cshtml
+++ b/BTL_KTPM.Admin_App/Views/Producer/Create.cshtml
@@ -30,6 +30,16 @@
                             <span asp-validation-for="Description" class="text-danger"></span>
                         </div>
                         <div class="form-group">
+                            <label asp-for="SĐT" class="control-label"></label>
+                            <input asp-for="SĐT" class="form-control" />
+                            <span asp-validation-for="SĐT" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="Address" class="control-label"></label>
+                            <input asp-for="Address" class="form-control" />
+                            <span asp-validation-for="Address" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
                             <input type="submit" value="Create" class="btn btn-primary" style="margin:20px 0;" />
                         </div>
                     </form>
