--- a/BTL_KTPM.Admin_App/Views/Producer/Edit.cshtml
+++ b/BTL_KTPM.Admin_App/Views/Producer/Edit.cshtml
@@ -31,9 +31,20 @@
                             <span asp-validation-for="Description" class="text-danger"></span>
                         </div>
                         <div class="form-group">
+                            <label asp-for="SĐT" class="control-label"></label>
+                            <input asp-for="SĐT" class="form-control" />
+                            <span asp-validation-for="SĐT" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="Address" class="control-label"></label>
+                            <input asp-for="Address" class="form-control" />
+                            <span asp-validation-for="Address" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
                             <input type="hidden" asp-for="id" />
                             <input type="submit" value="Save" class="btn btn-primary" style="margin: 20px 0;"/>
                         </div>
+
                     </form>
                 </div>
             </div>
