--- a/BTL_KTPM.Admin_App/Views/Product/Create.cshtml
+++ b/BTL_KTPM.Admin_App/Views/Product/Create.cshtml
@@ -18,7 +18,7 @@
         <div class="card-body">
             <div class="row">
                 <div class="col-md-4">
-                    <form asp-action="Create" enctype="multipart/form-data">
+                    <form asp-action="Create" asp-controller="Product" enctype="multipart/form-data">
                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                         <div class="form-group">
                             <label asp-for="ProductName" class="control-label"></label>
@@ -56,9 +56,9 @@
                             <span asp-validation-for="ProducerId" class="text-danger"></span>
                         </div>
                         <div class="form-group">
-                            <select name="categoryId" asp-items="@ViewBag.Categories" class="form-control">
-                                <option>--Chọn danh mục--</option>
-                            </select>
+                            <label asp-for="CategoryId" class="control-label"></label>
+                            <input asp-for="CategoryId" class="form-control" />
+                            <span asp-validation-for="CategoryId" class="text-danger"></span>
                         </div>
                         <div class="form-group">
                             <label asp-for="ThumbnailImage" class="control-label"></label>
