--- a/BTL_KTPM.Admin_App/Views/Product/Edit.cshtml
+++ b/BTL_KTPM.Admin_App/Views/Product/Edit.cshtml
@@ -18,8 +18,9 @@
         <div class="card-body">
             <div class="row">
                 <div class="col-md-4">
-                    <form asp-action="Edit" enctype="multipart/form-data">
+                    <form asp-action="Edit" enctype="multipart/form-data" >
                         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                        
                         <div class="form-group">
                             <label asp-for="ProductName" class="control-label"></label>
                             <input asp-for="ProductName" class="form-control" />
@@ -64,6 +65,11 @@
                             <label asp-for="CategoryId" class="control-label"></label>
                             <input asp-for="CategoryId" class="form-control" />
                             <span asp-validation-for="CategoryId" class="text-danger"></span>
+                        </div>
+                        <div class="form-group">
+                            <label asp-for="ThumbnailImage" class="control-label"></label>
+                            <input asp-for="ThumbnailImage" type="file" class="form-control" />
+                            <span asp-validation-for="ThumbnailImage" class="text-danger"></span>
                         </div>
                         <div class="form-group">
                             <input type="submit" value="Lưu" class="btn btn-primary" style="margin:20px 0"/>
