add page contact

--- a/BTL_KTPM.WebMvc/Views/Account/Login.cshtml
+++ b/BTL_KTPM.WebMvc/Views/Account/Login.cshtml
@@ -18,7 +18,7 @@
     </div>
     <a href="" class="forget-password">Quên mật khẩu ? </a>
     <div class="regeiter-now">
-        Bạn chưa có tài khoản. Đăng ký <a href="./regeiter.html">tại đây </a>    
+        Bạn chưa có tài khoản. Đăng ký <a href="@Url.Action("Login","Account")">tại đây </a>    
     </div>
 </div> 
 
