--- a/BTL_KTPM.Admin_App/Views/Shared/_Layout.cshtml
+++ b/BTL_KTPM.Admin_App/Views/Shared/_Layout.cshtml
@@ -118,6 +118,18 @@
                                 </nav>
                             </nav>
                         </div>
+                        <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapseContact" aria-expanded="false" aria-controls="collapseProducer">
+                            <div class="sb-nav-link-icon"><i class="fa-solid fa-message"></i></div>
+                            Phản hồi
+                            <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
+                        </a>
+                        <div class="collapse" id="collapseContact" aria-labelledby="headingSix" data-bs-parent="#sidenavAccordion">
+                            <nav class="sb-sidenav-menu-nested nav accordion" id="sidenavAccordionPages">
+                                <nav class="sb-sidenav-menu-nested nav">
+                                    <a class="nav-link" asp-action="Index" asp-controller="Contact">Danh sách</a>
+                                </nav>
+                            </nav>
+                        </div>
                     </div>
                 </div>
                 <div class="sb-sidenav-footer">
