--- a/BTL_KTPM.WebMvc/Views/Shared/_Layout.cshtml
+++ b/BTL_KTPM.WebMvc/Views/Shared/_Layout.cshtml
@@ -10,10 +10,18 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
     
+    @if(@ViewData["Title"] == "News")
+    {
+        <link rel="stylesheet" href="~/css/news.css">
+    }
+    else
+    {
     <link rel="stylesheet" href="~/css/cart.css">
+        
+    }
     <link rel="stylesheet" href="~/css/regeiter.css">
     <link rel="stylesheet" href="~/css/about.css"> 
-        <script src="~/lib/jquery/dist/jquery.js"></script>
+     <script src="~/lib/jquery/dist/jquery.js"></script>
     
     @if(@ViewData["Title"] == "Details")
     {
@@ -175,7 +183,7 @@
                                             <a class="nav-link active" aria-current="page" asp-action="Index" asp-controller="Product">Sản phẩm</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link active" aria-current="page" href="allnews.html">Tin
+                                            <a class="nav-link active" aria-current="page" asp-action="News" asp-controller="Home">Tin
                                                 tức</a>
                                         </li>
                                         <li class="nav-item">
@@ -219,9 +227,9 @@
                                         </div>
                                     </li>
                                     <li>
-                                        <a class="icon-buy" href="cart.html">
+                                        <a class="icon-buy" href="@Url.Action("Index","Cart")">
                                             <i class="fas fa-shopping-cart" ></i>
-                                            <div class="number-buy">0</div>
+                                            @*<div class="number-buy">0</div>*@
                                         </a>
                                     </li>
                                 </ul>
@@ -339,7 +347,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
         integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF"
         crossorigin="anonymous"></script>
-        
+        @RenderSection("Scripts", required:false)
 </body>
 
 </html>
